add sample model, set up partial views

--- a/TheaterDatabase/Styles/global.scss
+++ b/TheaterDatabase/Styles/global.scss
@@ -1,6 +1,6 @@
 ﻿/* VENDOR - Default fall-backs and external files.
 ========================================================================== */
-@import "normalize";
+/*@import "normalize";*/
 
 /* BASE - Base Variable file along with starting point Mixins and Placeholders.
 ========================================================================== */
@@ -11,15 +11,15 @@
 
 /* FRAMEWORK - Structure and layout files.
 ========================================================================== */
-@import "framework/grid";
+/*@import "framework/grid";*/
 @import "framework/breakpoints";
-@import "framework/layout";
+/*@import "framework/layout";*/
 
 
 /* MODULES - Re-usable site elements.
 ========================================================================== */
-
+@import "modules/home/home";
 
 /* external packages
 ========================================================================== */
-@import "bootstrap/bootstrap";
+/*@import "bootstrap/bootstrap";*/
