--- a/TheaterDatabase/Views/Shared/_Layout.cshtml
+++ b/TheaterDatabase/Views/Shared/_Layout.cshtml
@@ -7,30 +7,46 @@
     @Styles.Render("~/bundles/global-styles")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-            </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Theater Database</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="nav navbar-nav mr-auto">
+                <li class="@(ViewContext.RouteData.Values["Action"].ToString() == "Index" ? "active" : "")">
+                    @Html.ActionLink("Home", "Index", "Home", null, new { @class = "nav-link"})
+                </li>
+                <li class="@(ViewContext.RouteData.Values["Action"].ToString() == "Crud" ? "active" : "")">
+                    @Html.ActionLink("CRUD", "Crud", "Home", null, new { @class = "nav-link"})
+                </li>
+                <li class="@(ViewContext.RouteData.Values["Action"].ToString() == "Analytics" ? "active" : "")">
+                    @Html.ActionLink("Analytics", "Analytics", "Home", null, new { @class = "nav-link"})
+                </li>
+            </ul>
+            @*<form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>*@
         </div>
-    </div>
+    </nav>
+
     <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <div class="row">
+                <div class="col-2">
+                    <p>EECS 341 Final Project</p>
+                </div>
+                <div class="col text-center">
+                    <p>Giuliana Conte, Ryan Arvizu, Nick Charles, Erik Espinosa</p>
+                </div>
+                <div class="col-1">
+                    <p>&copy; @DateTime.Now.Year</p>
+                </div>
+            </div>
         </footer>
     </div>
 
