--- a/TheaterDatabase/Views/Home/Crud.cshtml
+++ b/TheaterDatabase/Views/Home/Crud.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "CRUD (Create Read Update Delete) Operations";
 }
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 <h3>@ViewBag.Message</h3>
 
 <ul class="nav nav-tabs">
