--- a/TheaterDatabase/Views/Home/Crud.cshtml
+++ b/TheaterDatabase/Views/Home/Crud.cshtml
@@ -1,40 +1,55 @@
-﻿@{
+﻿
+@model TheaterDatabase.ViewModels.CRUD_VMs.CRUDVM
+
+@{
     ViewBag.Title = "CRUD (Create Read Update Delete) Operations";
 }
 <h2>@ViewBag.Title</h2>
 <h3>@ViewBag.Message</h3>
 
-<ul class="nav nav-tabs">
-    <li class="active"><a data-toggle="tab" href="#shows">Shows</a></li>
-    <li><a data-toggle="tab" href="#members">Members</a></li>
-    <li><a data-toggle="tab" href="#exec">Exec</a></li>
-    <li><a data-toggle="tab" href="#casts">Casts</a></li>
-    <li><a data-toggle="tab" href="#staff">Staff</a></li>
-    <li><a data-toggle="tab" href="#pits">Pits</a></li>
+<ul class="nav nav-tabs" id="myTab" role="tablist">
+    <li class="nav-item">
+        <a class="nav-link active" id="shows-tab" data-toggle="tab" href="#shows" role="tab" aria-controls="shows" aria-selected="true">Shows</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" id="members-tab" data-toggle="tab" href="#members" role="tab" aria-controls="members" aria-selected="false">Members</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" id="exec-tab" data-toggle="tab" href="#exec" role="tab" aria-controls="exec" aria-selected="false">Exec</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" id="casts-tab" data-toggle="tab" href="#casts" role="tab" aria-controls="casts" aria-selected="false">Casts</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" id="staff-tab" data-toggle="tab" href="#staff" role="tab" aria-controls="staff" aria-selected="false">Staff</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" id="pits-tab" data-toggle="tab" href="#pits" role="tab" aria-controls="pits" aria-selected="false">Pits</a>
+    </li>
 </ul>
 
 <div class="tab-content">
-    <div id="shows" class="tab-pane fade in active">
+    <div id="shows" class="m-2 tab-pane active">
         <h3>Shows</h3>
-        @{ Html.RenderPartial("CRUDPartials/_Shows"); }
+        @Html.Partial("CRUDPartials/_Shows", Model._shows_vm)
     </div>
-    <div id="members" class="tab-pane fade">
+    <div id="members" class="m-2 tab-pane fade">
         <h3>Members</h3>
         @{ Html.RenderPartial("CRUDPartials/_Members"); }
     </div>
-    <div id="exec" class="tab-pane fade">
+    <div id="exec" class="m-2 tab-pane fade">
         <h3>Exec</h3>
         @{ Html.RenderPartial("CRUDPartials/_Exec"); }
     </div>
-    <div id="casts" class="tab-pane fade">
+    <div id="casts" class="m-2 tab-pane fade">
         <h3>Casts</h3>
         @{ Html.RenderPartial("CRUDPartials/_Casts"); }
     </div>
-    <div id="staff" class="tab-pane fade">
+    <div id="staff" class="m-2 tab-pane fade">
         <h3>Staff</h3>
         @{ Html.RenderPartial("CRUDPartials/_Staff"); }
     </div>
-    <div id="pits" class="tab-pane fade">
+    <div id="pits" class="m-2 tab-pane fade">
         <h3>Pits</h3>
         @{ Html.RenderPartial("CRUDPartials/_Pits"); }
     </div>
