--- a/TheaterDatabase/Views/Home/CRUDPartials/_Casts.cshtml
+++ b/TheaterDatabase/Views/Home/CRUDPartials/_Casts.cshtml
@@ -19,18 +19,12 @@
                             <span>@Html.DisplayNameFor(m => m.Member)</span>
                         </th>
                         <th>
-                            <span>@Html.DisplayNameFor(m => m.IntMemberID)</span>
-                        </th>
-                        <th>
                             <span>@Html.DisplayNameFor(m => m.Show)</span>
-                        </th>
-                        <th>
-                            <span>@Html.DisplayNameFor(m => m.IntShowID)</span>
                         </th>
                         <th></th>
                     </tr>
                 </thead>
-                @foreach (var item in Model.LstShows)
+                @foreach (var item in Model.LstCasts)
                 {
                     <tr>
                         <td>
@@ -43,16 +37,10 @@
                             <span class="divNoEditing">@Html.DisplayFor(modelItem => item.StrRole)</span>
                         </td>
                         <td>
-                            <span class="divNoEditing">@Html.DisplayFor(modelItem => item.Member)</span>
-                        </td>
-                        <td>
-                            <span class="divNoEditing">@Html.DisplayFor(modelItem => item.IntMemberID)</span>
+                            <span class="divNoEditing">@Html.DisplayFor(modelItem => item.Member.StrName)</span>
                         </td>
                         <td>
                             <span class="divNoEditing">@Html.DisplayFor(modelItem => item.Show.StrName)</span>
-                        </td>
-                        <td>
-                            <span class="divNoEditing">@Html.DisplayFor(modelItem => item.Show.IntShowID) @Html.DisplayFor(modelItem => item.Date.IntYear)</span>
                         </td>
                         <td>
                             @Html.ActionLink("Edit", "Edit", new { id = item.IntCastID }) |
