--- a/TheaterDatabase/Views/Home/Crud.cshtml
+++ b/TheaterDatabase/Views/Home/Crud.cshtml
@@ -35,22 +35,22 @@
     </div>
     <div id="members" class="m-2 tab-pane fade">
         <h3>Members</h3>
-        @{ Html.RenderPartial("CRUDPartials/_Members"); }
+        @Html.Partial("CRUDPartials/_Shows", Model._members_vm)
     </div>
     <div id="exec" class="m-2 tab-pane fade">
         <h3>Exec</h3>
-        @{ Html.RenderPartial("CRUDPartials/_Exec"); }
+        @Html.Partial("CRUDPartials/_Shows", Model._exec_vm)
     </div>
     <div id="casts" class="m-2 tab-pane fade">
         <h3>Casts</h3>
-        @{ Html.RenderPartial("CRUDPartials/_Casts"); }
+        @Html.Partial("CRUDPartials/_Shows", Model._casts_vm)
     </div>
     <div id="staff" class="m-2 tab-pane fade">
         <h3>Staff</h3>
-        @{ Html.RenderPartial("CRUDPartials/_Staff"); }
+        @Html.Partial("CRUDPartials/_Shows", Model._staff_vm)
     </div>
     <div id="pits" class="m-2 tab-pane fade">
         <h3>Pits</h3>
-        @{ Html.RenderPartial("CRUDPartials/_Pits"); }
+        @Html.Partial("CRUDPartials/_Shows", Model._pits_vm)
     </div>
 </div>
