--- a/TheaterDatabase/Views/Home/CRUDPartials/_Exec.cshtml
+++ b/TheaterDatabase/Views/Home/CRUDPartials/_Exec.cshtml
@@ -1,1 +1,49 @@
-﻿
+﻿@model TheaterDatabase.ViewModels.CRUD_VMs.ExecVM
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th>
+                            <span>@Html.DisplayNameFor(m => m.IntExecID)</span>
+                        </th>
+                        <th>
+                            <span>@Html.DisplayNameFor(m => m.StrPosition)</span>
+                        </th>
+                        <th>
+                            <span>@Html.DisplayNameFor(m => m.Member)</span>
+                        </th>
+                        <th>
+                            <span>@Html.DisplayNameFor(m => m.Date)</span>
+                        </th>
+                        <th></th>
+                    </tr>
+                </thead>
+                @foreach (var item in Model.LstExec)
+                {
+                <tr>
+                    <td>
+                        <span class="divNoEditing">@Html.DisplayFor(modelItem => item.IntExecID)</span>
+                    </td>
+                    <td>
+                        <span class="divNoEditing">@Html.DisplayFor(modelItem => item.StrPosition)</span>
+                    </td>
+                    <td>
+                        <span class="divNoEditing">@Html.DisplayFor(modelItem => item.Member.StrName)</span>
+                    </td>
+                    <td>
+                        <span class="divNoEditing">@Html.DisplayFor(modelItem => item.Date.StrSemester) @Html.DisplayFor(modelItem => item.Date.IntYear)</span>
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.IntExecID }) |
+                        @Html.ActionLink("Detail", "Detail", new { id = item.IntExecID }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.IntExecID })
+                    </td>
+                </tr>
+                }
+            </table>
+        </div>
+    </div>
+</div>
