--- a/TheaterDatabase/Views/Home/CRUDPartials/_Members.cshtml
+++ b/TheaterDatabase/Views/Home/CRUDPartials/_Members.cshtml
@@ -1,1 +1,43 @@
-﻿
+﻿@model TheaterDatabase.ViewModels.CRUD_VMs.ExecVM
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th>
+                            <span>@Html.DisplayNameFor(m => m.IntMemberID)</span>
+                        </th>
+                        <th>
+                            <span>@Html.DisplayNameFor(m => m.StrName)</span>
+                        </th>
+                        <th>
+                            <span>@Html.DisplayNameFor(m => m.Club)</span>
+                        </th>
+                        <th></th>
+                    </tr>
+                </thead>
+                @foreach (var item in Model.LstMember)
+                {
+                <tr>
+                    <td>
+                        <span class="divNoEditing">@Html.DisplayFor(modelItem => item.IntMemberID)</span>
+                    </td>
+                    <td>
+                        <span class="divNoEditing">@Html.DisplayFor(modelItem => item.StrName)</span>
+                    </td>
+                    <td>
+                        <span class="divNoEditing">@Html.DisplayFor(modelItem => item.Club.StrName)</span>
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.IntMemberID }) |
+                        @Html.ActionLink("Detail", "Detail", new { id = item.IntMemberID }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.IntMemberID })
+                    </td>
+                </tr>
+                }
+            </table>
+        </div>
+    </div>
+</div>
