added Pits view

--- a/TheaterDatabase/Views/Home/CRUDPartials/_Members.cshtml
+++ b/TheaterDatabase/Views/Home/CRUDPartials/_Members.cshtml
@@ -1,4 +1,4 @@
-﻿@model TheaterDatabase.ViewModels.CRUD_VMs.ExecVM
+﻿@model TheaterDatabase.ViewModels.CRUD_VMs.MembersVM
 
 <div class="container-fluid">
     <div class="row">
