--- a/TheaterDatabase/Views/Home/CRUDPartials/_Pits.cshtml
+++ b/TheaterDatabase/Views/Home/CRUDPartials/_Pits.cshtml
@@ -24,7 +24,7 @@
                         <th></th>
                     </tr>
                 </thead>
-                @foreach (var item in Model.LstPit)
+                @foreach (var item in Model.LstPits)
                 {
             <tr>
                 <td>
