the casts partial view is basically complete

--- a/TheaterDatabase/Styles/new-global.css
+++ b/TheaterDatabase/Styles/new-global.css
@@ -1,2 +1,19 @@
 ﻿body {
 }
+
+
+.divNoEditing {
+    display: block;
+}
+
+.divYesEditing {
+    display: none;
+}
+
+.divNoNewRow {
+    display: block;
+}
+
+.divYesNewRow {
+    display: none;
+}
