--- a/TheaterDatabase/Views/Shared/_Layout.cshtml
+++ b/TheaterDatabase/Views/Shared/_Layout.cshtml
@@ -35,17 +35,20 @@
 
     <div class="container body-content">
         @RenderBody()
+        <br />
+        <br />
+        <br />
         <hr />
         <footer>
             <div class="row">
-                <div class="col-2">
+                <div class="col">
                     <p>EECS 341 Final Project</p>
                 </div>
                 <div class="col text-center">
                     <p>Giuliana Conte, Ryan Arvizu, Nick Charles, Erik Espinosa</p>
                 </div>
-                <div class="col-1">
-                    <p>&copy; @DateTime.Now.Year</p>
+                <div class="col">
+                    <p class="float-right">&copy; @DateTime.Now.Year</p>
                 </div>
             </div>
         </footer>
