--- a/TheaterDatabase/Views/Home/CRUDPartials/_Pits.cshtml
+++ b/TheaterDatabase/Views/Home/CRUDPartials/_Pits.cshtml
@@ -1,5 +1,9 @@
 ﻿@model TheaterDatabase.ViewModels.CRUD_VMs.PitsVM
 
+
+
+<h3>Pits</h3>
+
 <div class="container-fluid">
     <div class="row">
         <div class="col-12">
@@ -26,28 +30,28 @@
                 </thead>
                 @foreach (var item in Model.LstPits)
                 {
-            <tr>
-                <td>
-                    <span class="divNoEditing">@Html.DisplayFor(modelItem => item.IntPitID)</span>
-                </td>
-                <td>
-                    <span class="divNoEditing">@Html.DisplayFor(modelItem => item.StrInstrument)</span>
-                </td>
-                <td>
-                    <span class="divNoEditing">@Html.DisplayFor(modelItem => item.IntSeat)</span>
-                </td>
-                <td>
-                    <span class="divNoEditing">@Html.DisplayFor(modelItem => item.Member.StrName)</span>
-                </td>
-                <td>
-                    <span class="divNoEditing">@Html.DisplayFor(modelItem => item.Show.StrName)</span>
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.IntPitID }) |
-                    @Html.ActionLink("Detail", "Detail", new { id = item.IntPitID }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.IntPitID })
-                </td>
-            </tr>
+                    <tr>
+                        <td>
+                            <span class="divNoEditing">@Html.DisplayFor(modelItem => item.IntPitID)</span>
+                        </td>
+                        <td>
+                            <span class="divNoEditing">@Html.DisplayFor(modelItem => item.StrInstrument)</span>
+                        </td>
+                        <td>
+                            <span class="divNoEditing">@Html.DisplayFor(modelItem => item.IntSeat)</span>
+                        </td>
+                        <td>
+                            <span class="divNoEditing">@Html.DisplayFor(modelItem => item.Member.StrName)</span>
+                        </td>
+                        <td>
+                            <span class="divNoEditing">@Html.DisplayFor(modelItem => item.Show.StrName)</span>
+                        </td>
+                        <td>
+                            @Html.ActionLink("Edit", "Edit", new { id = item.IntPitID }) |
+                            @Html.ActionLink("Detail", "Detail", new { id = item.IntPitID }) |
+                            @Html.ActionLink("Delete", "Delete", new { id = item.IntPitID })
+                        </td>
+                    </tr>
                 }
             </table>
         </div>
