--- a/TheaterDatabase/Views/Home/CRUDPartials/_Shows.cshtml
+++ b/TheaterDatabase/Views/Home/CRUDPartials/_Shows.cshtml
@@ -1,5 +1,9 @@
 ﻿@model TheaterDatabase.ViewModels.CRUD_VMs.ShowsVM
 
+
+
+<h3>Shows</h3>
+
 <div class="container-fluid">
     <div class="row">
         <div class="col-12">
