--- a/TheaterDatabase/Views/Home/CRUDPartials/_Staff.cshtml
+++ b/TheaterDatabase/Views/Home/CRUDPartials/_Staff.cshtml
@@ -1,5 +1,9 @@
 ﻿@model TheaterDatabase.ViewModels.CRUD_VMs.StaffVM
 
+
+
+<h3>Staff</h3>
+
 <div class="container-fluid">
     <div class="row">
         <div class="col-12">
@@ -23,25 +27,25 @@
                 </thead>
                 @foreach (var item in Model.LstStaff)
                 {
-                <tr>
-                    <td>
-                        <span class="divNoEditing">@Html.DisplayFor(modelItem => item.IntStaffID)</span>
-                    </td>
-                    <td>
-                        <span class="divNoEditing">@Html.DisplayFor(modelItem => item.StrPosition)</span>
-                    </td>
-                    <td>
-                        <span class="divNoEditing">@Html.DisplayFor(modelItem => item.Member.StrName)</span>
-                    </td>
-                    <td>
-                        <span class="divNoEditing">@Html.DisplayFor(modelItem => item.Show.StrName)</span>
-                    </td>
-                    <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.IntStaffID }) |
-                        @Html.ActionLink("Detail", "Detail", new { id = item.IntStaffID }) |
-                        @Html.ActionLink("Delete", "Delete", new { id = item.IntStaffID })
-                    </td>
-                </tr>
+                    <tr>
+                        <td>
+                            <span class="divNoEditing">@Html.DisplayFor(modelItem => item.IntStaffID)</span>
+                        </td>
+                        <td>
+                            <span class="divNoEditing">@Html.DisplayFor(modelItem => item.StrPosition)</span>
+                        </td>
+                        <td>
+                            <span class="divNoEditing">@Html.DisplayFor(modelItem => item.Member.StrName)</span>
+                        </td>
+                        <td>
+                            <span class="divNoEditing">@Html.DisplayFor(modelItem => item.Show.StrName)</span>
+                        </td>
+                        <td>
+                            @Html.ActionLink("Edit", "Edit", new { id = item.IntStaffID }) |
+                            @Html.ActionLink("Detail", "Detail", new { id = item.IntStaffID }) |
+                            @Html.ActionLink("Delete", "Delete", new { id = item.IntStaffID })
+                        </td>
+                    </tr>
                 }
             </table>
         </div>
