--- a/TheaterDatabase/Views/Home/CRUDPartials/_Exec.cshtml
+++ b/TheaterDatabase/Views/Home/CRUDPartials/_Exec.cshtml
@@ -22,6 +22,9 @@
                         <th>
                             <span>@Html.DisplayNameFor(m => m.Date)</span>
                         </th>
+                        <th>
+                            <span>@Html.DisplayNameFor(m => m.Club)</span>
+                        </th>
                         <th></th>
                     </tr>
                 </thead>
@@ -36,6 +39,9 @@
                         </td>
                         <td>
                             <span class="divNoEditing">@Html.DisplayFor(modelItem => item.Member.StrName)</span>
+                        </td>
+                        <td>
+                            <span class="divNoEditing">@Html.DisplayFor(modelItem => item.Club.StrClubName)</span>
                         </td>
                         <td>
                             <span class="divNoEditing">@Html.DisplayFor(modelItem => item.Date.StrSemester) @Html.DisplayFor(modelItem => item.Date.IntYear)</span>
