--- a/TheaterDatabase/Views/Home/Crud.cshtml
+++ b/TheaterDatabase/Views/Home/Crud.cshtml
@@ -48,3 +48,14 @@
         @Html.Partial("CRUDPartials/_Pits", Model._pits_vm)
     </div>
 </div>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function (event) {
+        //initShowsTab();
+        //initMembersTab();
+        //initExecTab();
+        initCastsTab();
+        //initStaffTab();
+        //initPitsTab();
+    });
+</script>
