--- a/TheaterDatabase/Views/Home/Crud.cshtml
+++ b/TheaterDatabase/Views/Home/Crud.cshtml
@@ -51,11 +51,11 @@
 
 <script>
     document.addEventListener('DOMContentLoaded', function (event) {
-        //initShowsTab();
-        //initMembersTab();
-        //initExecTab();
         initCastsTab();
-        //initStaffTab();
-        //initPitsTab();
+        initExecTab();
+        initMembersTab();
+        initPitsTab();
+        initShowsTab();
+        initStaffTab();
     });
 </script>
