add row data attributes to all tabs

--- a/TheaterDatabase/Views/Home/CRUDPartials/_Exec.cshtml
+++ b/TheaterDatabase/Views/Home/CRUDPartials/_Exec.cshtml
@@ -30,7 +30,7 @@
                 </thead>
                 @foreach (var item in Model.LstExec)
                 {
-                    <tr>
+                    <tr data-exec="@(item.IntExecID + "_row")">
                         <td>
                             <span>@Html.DisplayFor(modelItem => item.IntExecID)</span>
                         </td>
