--- a/TheaterDatabase/Views/Home/CRUDPartials/_Staff.cshtml
+++ b/TheaterDatabase/Views/Home/CRUDPartials/_Staff.cshtml
@@ -27,7 +27,7 @@
                 </thead>
                 @foreach (var item in Model.LstStaff)
                 {
-                    <tr>
+                    <tr data-staff="@(item.IntStaffID + "_row")">
                         <td>
                             <span class="divNoEditing">@Html.DisplayFor(modelItem => item.IntStaffID)</span>
                         </td>
