--- a/TheaterDatabase/Views/Home/CRUDPartials/_Pits.cshtml
+++ b/TheaterDatabase/Views/Home/CRUDPartials/_Pits.cshtml
@@ -30,7 +30,7 @@
                 </thead>
                 @foreach (var item in Model.LstPits)
                 {
-                    <tr>
+                    <tr data-pits="@(item.IntPitID + "_row")">
                         <td>
                             <span class="divNoEditing">@Html.DisplayFor(modelItem => item.IntPitID)</span>
                         </td>
