--- a/TheaterDatabase/Views/Home/CRUDPartials/_Staff.cshtml
+++ b/TheaterDatabase/Views/Home/CRUDPartials/_Staff.cshtml
@@ -51,3 +51,34 @@
         </div>
     </div>
 </div>
+
+
+
+
+<br />
+<hr />
+<br />
+
+<div class="row divNoNewRow">
+    <div class="col">
+        <p class="float-right">
+            <button class="m-1 btn btn-primary" onclick="showInsertRow('staff')">Insert Row</button>
+        </p>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-2 divYesNewRow">
+        @Html.EditorFor(model => model.StrPosition, new { htmlAttributes = new { @class = "form-control", @placeholder = "Position", @data_cast = "new_strPosition" } })
+    </div>
+    <div class="col-3 divYesNewRow">
+        @Html.DropDownListFor(model => model.IntMemberID, new SelectList(Model.LstAllMembers, "IntMemberID", "StrName"), new { @class = "form-control", @data_cast = "new_memberID" })
+    </div>
+    <div class="col-3 divYesNewRow">
+        @Html.DropDownListFor(model => model.IntShowID, new SelectList(Model.LstAllShows, "IntShowID", "StrName"), new { @class = "form-control", @data_cast = "new_showID" })
+    </div>
+    <div class="col divYesNewRow">
+        <button class="m-1 btn btn-primary" onclick="insertStaff()">Insert</button>
+        <button class="m-1 btn btn-primary" onclick="hideInsertRow('staff')">Cancel Insert</button>
+    </div>
+</div>
