--- a/TheaterDatabase/Views/Home/CRUDPartials/_Pits.cshtml
+++ b/TheaterDatabase/Views/Home/CRUDPartials/_Pits.cshtml
@@ -57,3 +57,37 @@
         </div>
     </div>
 </div>
+
+
+
+
+<br />
+<hr />
+<br />
+
+<div class="row divNoNewRow">
+    <div class="col">
+        <p class="float-right">
+            <button class="m-1 btn btn-primary" onclick="showInsertRow('staff')">Insert Row</button>
+        </p>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-2 divYesNewRow">
+        @Html.EditorFor(model => model.StrInstrument, new { htmlAttributes = new { @class = "form-control", @placeholder = "Instrument", @data_cast = "new_strInstrument" } })
+    </div>
+    <div class="col-2 divYesNewRow">
+        @Html.EditorFor(model => model.IntSeat, new { htmlAttributes = new { @class = "form-control", @placeholder = "Seat", @data_cast = "new_intSeat" } })
+    </div>
+    <div class="col-3 divYesNewRow">
+        @Html.DropDownListFor(model => model.IntMemberID, new SelectList(Model.LstAllMembers, "IntMemberID", "StrName"), new { @class = "form-control", @data_cast = "new_memberID" })
+    </div>
+    <div class="col-3 divYesNewRow">
+        @Html.DropDownListFor(model => model.IntShowID, new SelectList(Model.LstAllShows, "IntShowID", "StrName"), new { @class = "form-control", @data_cast = "new_showID" })
+    </div>
+    <div class="col divYesNewRow">
+        <button class="m-1 btn btn-primary" onclick="insertPits()">Insert</button>
+        <button class="m-1 btn btn-primary" onclick="hideInsertRow('pits')">Cancel Insert</button>
+    </div>
+</div>
